2004-04-16  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v2_format.txt, src/libcommon/munge_defs.h,
	  src/libcommon/munge_msg.h, src/libmunge/ctx.c, src/libmunge/ctx.h,
	  src/libmunge/decode.c, src/libmunge/encode.c, src/libmunge/munge.h,
	  src/libmunge/strerror.c, src/munge/munge.c, src/munge/unmunge.c,
	  src/munged/Makefile.am, src/munged/conf.c, src/munged/conf.h,
	  src/munged/dec_v1.c, src/munged/enc_v1.c, src/munged/gids.c,
	  src/munged/gids.h, src/munged/hash.c, src/munged/hash.h,
	  src/munged/replay.c: Added support for UID & GID decode restrictions.

2004-04-14  Chris Dunlap  <cdunlap@llnl.gov>

	* : Re-bootstrap'd with autoconf-2.59, automake-1.8.3, libtool-1.5.6.

2004-04-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/unmunge.c: Tweaks for Solaris 2.8.

	* src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am:
	  Moved linking of libnsl from libmunge to munged/unmunge.

	* configure.ac, config/x_ac_check_cond_lib.m4,
	  src/libmunge/Makefile.am: Added checks for libnsl & libsocket.

	* configure.ac, src/libmissing/Makefile.am, src/libmissing/getopt.c,
	  src/libmissing/getopt.h, src/libmissing/getopt1.c, src/munge/munge.c,
	  src/munge/unmunge.c, src/munged/conf.c:
	  Added GNU getopt from glibc-2.3.2 to libmissing.

2004-04-06  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Tweaked in an attempt to make path independent.

2004-04-02  Chris Dunlap  <cdunlap@llnl.gov>

	* : Added official UCRL number.

	* munge.spec, src/etc/munge.init:
	  Changed daemon rpm (re)start behavior at install or upgrade.

2004-03-31  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4, src/munge/unmunge.c, src/munged/dec_v1.c,
	  src/munged/enc_v1.c, src/munged/zip.c:
	  Added -pedantic to --enable-debug CFLAGS.

2004-03-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c(main):
	  Changed logfile priority from LOG_DEBUG to LOG_NOTICE (if NDEBUG).

	* munge.spec, config/Make-rpm.mk: