@@ -1,3 +1,7 @@
+2004-04-21  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/munged/gids.c(gids_create): Added log msg.
+
 2004-04-16  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* doc/credential_v2_format.txt, src/libcommon/munge_defs.h,
